fix(Loader): align center the loading text

--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -52,6 +52,7 @@
   }
 
   .message {
+    text-align: center;
     font-weight: 400;
     font-size: 1.6rem;
   }
